datasets/dataset_txt/pipenv/pipenv_2457.txt
midse commented on 1 Feb 2017
Hello,
I updated pipenv this morning and I encoutered the issue below.
It works fine using pipenv 3.3.0 :)
Traceback (most recent call last):
  File "/usr/bin/pipenv", line 11, in <module>
    load_entry_point('pipenv==3.3.1', 'console_scripts', 'pipenv')()
  File "/usr/lib/python3.6/site-packages/pkg_resources/__init__.py", line 560, in load_entry_point
    return get_distribution(dist).load_entry_point(group, name)
  File "/usr/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2642, in load_entry_point
    return ep.load()
  File "/usr/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2296, in load
    return self.resolve()
  File "/usr/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2302, in resolve
    module = __import__(self.module_name, fromlist=['__name__'], level=0)
  File "/usr/lib/python3.6/site-packages/pipenv/__init__.py", line 6, in <module>
    from .cli import cli
  File "/usr/lib/python3.6/site-packages/pipenv/cli.py", line 721
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'
Regards,